[tool.poetry]
name = 'aap-client'
version = "1.0.0-beta.2"
description = 'AAP Client'
authors = ['Pau Ruiz i Safont <psafont@ebi.ac.uk>']
license = 'Apache-2.0'
readme = 'README.rst'
keywords = ['aap', 'ebi', 'jwt', 'auth', 'flask']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
]

repository = 'https://github.com/EMBL-EBI-TSI/aap-client-python'
homepage = 'https://github.com/EMBL-EBI-TSI/aap-client-python'

exclude = ['examples/*', 'docs/*', 'tests/*']

[tool.poetry.dependencies]
python = '~2.7 || ^3.4'

pyjwt = { version = '^1.5.2', extras = ['crypto']}
future = { version = '^0.16.0' }

# flask support
flask = { version = '^1.0.2', optional = true }

# unit-testing
pytest = { version = '^3.0', optional = true }
pytest-cov = { version = '^2.4', optional = true }
fake-gen = { version = '^1.0.0b1', optional = true }

# linting
pylint = { version = '^1.9.3', optional = true }

# docs
sphinx = { version = '^1.7.5', optional = true }
sphinxcontrib-fulltoc = { version = '^1.2.0', optional = true }


[tool.poetry.extras]
flask = ['flask']
test = ['pytest', 'pytest-cov', 'fake-gen', 'flask']
lint = ['pylint', 'flask']
docs = ['sphinx', 'sphinxcontrib-fulltoc', 'flask']


[tool.poetry.dev-dependencies]
tox = "^3.0"

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
